--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "group-chat-app-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,5 +10,172 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "dependencies": {
+    "anymatch": "^3.1.2",
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.8",
+    "agent-base": "^6.0.2",
+    "array-flatten": "^1.1.1",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "bcrypt": "^5.0.1",
+    "ansi-regex": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "are-we-there-yet": "^2.0.0",
+    "braces": "^3.0.2",
+    "brace-expansion": "^1.1.11",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.2",
+    "chokidar": "^3.5.3",
+    "color-support": "^1.1.3",
+    "buffer-equal-constant-time": "^1.0.1",
+    "chownr": "^2.0.0",
+    "concat-map": "^0.0.1",
+    "aproba": "^2.0.0",
+    "content-type": "^1.0.4",
+    "content-disposition": "^0.5.4",
+    "console-control-strings": "^1.1.0",
+    "cookie-signature": "^1.0.6",
+    "debug": "^3.2.7",
+    "delegates": "^1.0.0",
+    "cors": "^2.8.5",
+    "denque": "^2.1.0",
+    "detect-libc": "^2.0.1",
+    "destroy": "^1.2.0",
+    "depd": "^2.0.0",
+    "cookie": "^0.5.0",
+    "dottie": "^2.0.2",
+    "ee-first": "^1.1.1",
+    "ecdsa-sig-formatter": "^1.0.11",
+    "escape-html": "^1.0.3",
+    "encodeurl": "^1.0.2",
+    "express": "^4.18.1",
+    "etag": "^1.8.1",
+    "fresh": "^0.5.2",
+    "finalhandler": "^1.2.0",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "forwarded": "^0.2.0",
+    "fs-minipass": "^2.1.0",
+    "gauge": "^3.0.2",
+    "get-intrinsic": "^1.1.3",
+    "emoji-regex": "^8.0.0",
+    "has": "^1.0.3",
+    "glob": "^7.2.3",
+    "fill-range": "^7.0.1",
+    "has-unicode": "^2.0.1",
+    "glob-parent": "^5.1.2",
+    "has-symbols": "^1.0.3",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "inflight": "^1.0.6",
+    "has-flag": "^3.0.0",
+    "inflection": "^1.13.4",
+    "https-proxy-agent": "^5.0.1",
+    "ipaddr.js": "^1.9.1",
+    "ignore-by-default": "^1.0.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-binary-path": "^2.1.0",
+    "is-glob": "^4.0.3",
+    "is-property": "^1.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "generate-function": "^2.3.1",
+    "lodash": "^4.17.21",
+    "jws": "^3.2.2",
+    "lodash.includes": "^4.3.0",
+    "lodash.isinteger": "^4.0.4",
+    "inherits": "^2.0.4",
+    "lodash.isnumber": "^3.0.3",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.isboolean": "^3.0.3",
+    "jwa": "^1.4.1",
+    "lodash.isstring": "^4.0.1",
+    "make-dir": "^3.1.0",
+    "long": "^4.0.0",
+    "lru-cache": "^6.0.0",
+    "merge-descriptors": "^1.0.1",
+    "mime": "^1.6.0",
+    "is-number": "^7.0.0",
+    "methods": "^1.1.2",
+    "mime-types": "^2.1.35",
+    "mime-db": "^1.52.0",
+    "minizlib": "^2.1.2",
+    "mkdirp": "^1.0.4",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
+    "minimatch": "^3.1.2",
+    "mysql2": "^2.3.3",
+    "ms": "^2.1.3",
+    "negotiator": "^0.6.3",
+    "minipass": "^3.3.4",
+    "normalize-path": "^3.0.0",
+    "named-placeholders": "^1.1.2",
+    "nopt": "^1.0.10",
+    "node-addon-api": "^3.2.1",
+    "object-inspect": "^1.12.2",
+    "node-fetch": "^2.6.7",
+    "object-assign": "^4.1.1",
+    "npmlog": "^5.0.1",
+    "on-finished": "^2.4.1",
+    "once": "^1.4.0",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "path-is-absolute": "^1.0.1",
+    "proxy-addr": "^2.0.7",
+    "pg-connection-string": "^2.5.0",
+    "picomatch": "^2.3.1",
+    "pseudomap": "^1.0.2",
+    "media-typer": "^0.3.0",
+    "pstree.remy": "^1.1.8",
+    "qs": "^6.10.3",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "readdirp": "^3.6.0",
+    "lodash.once": "^4.1.1",
+    "readable-stream": "^3.6.0",
+    "rimraf": "^3.0.2",
+    "seq-queue": "^0.0.5",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "retry-as-promised": "^6.1.0",
+    "sequelize": "^6.23.1",
+    "serve-static": "^1.15.0",
+    "semver": "^5.7.1",
+    "sequelize-pool": "^7.1.0",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.4",
+    "set-blocking": "^2.0.0",
+    "sqlstring": "^2.3.3",
+    "string-width": "^4.2.3",
+    "statuses": "^2.0.1",
+    "signal-exit": "^3.0.7",
+    "supports-color": "^5.5.0",
+    "simple-update-notifier": "^1.0.7",
+    "strip-ansi": "^6.0.1",
+    "tar": "^6.1.11",
+    "toposort-class": "^1.0.1",
+    "string_decoder": "^1.3.0",
+    "to-regex-range": "^5.0.1",
+    "type-is": "^1.6.18",
+    "undefsafe": "^2.0.5",
+    "tr46": "^0.0.3",
+    "unpipe": "^1.0.0",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "uuid": "^8.3.2",
+    "toidentifier": "^1.0.1",
+    "vary": "^1.1.2",
+    "touch": "^3.1.0",
+    "wkx": "^0.5.0",
+    "validator": "^13.7.0",
+    "webidl-conversions": "^3.0.1",
+    "wrappy": "^1.0.2",
+    "wide-align": "^1.1.5",
+    "yallist": "^4.0.0",
+    "send": "^0.18.0",
+    "whatwg-url": "^5.0.0"
+  },
+  "description": ""
 }
